Removed objects that are still in the outliner will crash Blender #60350

Closed
opened 2019-01-09 15:59:47 +01:00 by Cody · 6 comments

System Information
Operating system: Windows 10 Home 64-bit
Graphics card: Intel HD Graphics 505

Blender Version
Broken: 2.80 Beta, 6d89337257, blender2.7, 2018-12-24
Worked: 2.79b release and earlier

Short description of error
After an object is removed using Python, the object is still shown in an outliner hierarchy, and moving the mouse cursor over the object in an outliner will crash Blender with an EXCEPTION_ACCESS_VIOLATION.

Exact steps for others to reproduce the error
Load this .blend file:

Object_Removal_Bug.blend

Run the script named remove_cube.py from the text editor.

Move your mouse cursor over the Cube in the outliner hierarchy, and Blender will crash due to an EXCEPTION_ACCESS_VIOLATION.

**System Information** Operating system: Windows 10 Home 64-bit Graphics card: Intel HD Graphics 505 **Blender Version** Broken: 2.80 Beta, 6d89337257b6, blender2.7, 2018-12-24 Worked: 2.79b release and earlier **Short description of error** After an object is removed using Python, the object is still shown in an outliner hierarchy, and moving the mouse cursor over the object in an outliner will crash Blender with an EXCEPTION_ACCESS_VIOLATION. **Exact steps for others to reproduce the error** Load this .blend file: [Object_Removal_Bug.blend](https://archive.blender.org/developer/F6230700/Object_Removal_Bug.blend) Run the script named remove_cube.py from the text editor. Move your mouse cursor over the Cube in the outliner hierarchy, and Blender will crash due to an EXCEPTION_ACCESS_VIOLATION.
Author

Added subscriber: @bldebg

Added subscriber: @bldebg

#60666 was marked as duplicate of this issue

#60666 was marked as duplicate of this issue
Member

Added subscriber: @mont29

Added subscriber: @mont29

Added subscriber: @Clarkx

Added subscriber: @Clarkx
Bastien Montagne self-assigned this 2019-01-24 17:44:06 +01:00

This issue was referenced by 7a353a7037

This issue was referenced by 7a353a703770ea1c63f24733fbb2e37eafcbf98c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60350
No description provided.