Fix T60350: Removed objects that are still in the outliner will crash Blender.

We need to force UI to fully redraw, BKE_id_delete & co won't do that
for us.